# PressureTrack

./: .gitignore  README.md
backend/: .env.dev  .flake8  .pre-commit-config.yaml  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
backend/accounts/: apps.py  backends.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/admins/: apps.py  models.py
backend/admins/management/commands/: initadmin.py
backend/common/: classes.py
backend/config/: settings.py  urls.py  yasg.py
backend/doctors/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/doctors/migrations/: 0001_initial.py
backend/patients/: apps.py  models.py  serializers.py  urls.py  views.py
backend/patients/migrations/: 0001_initial.py  0002_alter_patient_age.py  0003_alter_measurement_comment.py
mobile/DoctorApp/: settings.gradle
mobile/DoctorApp/app/: build.gradle
mobile/DoctorApp/app/src/main/: AndroidManifest.xml
mobile/DoctorApp/app/src/main/res/drawable/: back_button.xml  button_blue.xml  button_white.xml  edittext.xml  edittext_treatment.xml  ellipse_green.xml  logo.xml  measurement.xml  search.xml  search_button.xml  tab.xml  union.xml
mobile/DoctorApp/app/src/main/res/layout/: activity_active_patient.xml  activity_chronology.xml  (+7 more)
mobile/DoctorApp/gradle/wrapper/: gradle-wrapper.properties
mobile/PatientApp/: settings.gradle
mobile/PatientApp/app/: build.gradle
mobile/PatientApp/app/src/main/: AndroidManifest.xml
mobile/PatientApp/gradle/wrapper/: gradle-wrapper.properties
(+77 files in other folders)
